--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -11,6 +11,8 @@
 \usepackage[calc]{picture}
 \usepackage{tikz}
 
+% Irrelevant change to force rebuild
+
 \newlength{\bytewidth}
 \newlength{\bytetotalheight}
 \newlength{\bytedepth}
