#707 Clarified in change log that DPADJ, CNADJ and CICNADJ have been removed, not deprecated as their meaning was never unambiguous

--- a/VCFv4.4.tex
+++ b/VCFv4.4.tex
@@ -2568,7 +2568,8 @@ BCF2 files are expected to be indexed through the same index scheme, section~4 a
 \item Clarified CIPOS should be used to define micro-homology bounds
 \item Clarified INFO lines field ordering
 \item Clarified that symbolic and breakpoint notation ALT alleles are case sensitive.
-\item Deprecated SVTYPE, DPADJ, CNADJ, CICNADJ
+\item Deprecated SVTYPE
+\item Removed DPADJ, CNADJ, CICNADJ
 \item Disallowed BND ALT records (these should use breakpoint notation anyway)
 \item Removed definition of DP from Section 3 as it was already defined in Section 1.6.1.8.
 \item Deprecated bundles in favour of PSL-based phasing.
