Add CIGAR =/X entry to version history appendix
These CIGAR operations were added in 07dc1c67a717 in July 2010,
which was the initial addition of the TeX specification; they
were not present in the previous Pages document. It's so long ago
as to be barely relevant now, but it's worth mentioning them as
requiring VN:1.3 rather than VN:1.0.

In the SAM regexp in §1.4, write the operations in the familiar
canonical order (though it doesn't affect the meaning of the regexp).
Define \cigarops{...} to improve the formatting of lists of CIGAR
operations like "M/I/D" by making the slashes non-\tt, and also use
this in SAMtags.tex.

--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -9,6 +9,10 @@
 \newcommand{\tagregex}[1]{{\tt #1}}
 \newcommand{\metavar}[1]{{\rm\emph{#1}}}
 
+% Use as, e.g., \cigarops{MID} to produce M/I/D with the operators in \tt
+\newcommand*{\cigarops}[1]{\cigaropsAux#1*}
+\def\cigaropsAux#1#2*{{\tt #1}\if\relax\detokenize{#2}\relax\else/\cigaropsAux#2*\fi}
+
 \begin{document}
 
 \input{SAMtags.ver}
@@ -439,7 +443,7 @@ tags separated by `{\tt |}', each annotating a sub-region of the read.
 Each tag consists of \emph{start}, \emph{end}, \emph{strand},
 \emph{type} and zero or more \emph{key}{\tt =}\emph{value} pairs, each
 separated with semicolons. \emph{Start} and \emph{end} are 1-based
-positions between one and the sum of the {\tt M/I/D/P/S/=/X}
+positions between one and the sum of the \cigarops{MIDPS=X}
 {\sf CIGAR} operators, i.e., {\sf SEQ} length plus any pads.  Note
 any editing of the CIGAR string may require updating the {\tt PT}
 tag coordinates, or even invalidate them.
