Document SAM ambiguity of 1bp long seq with QUAL "*".
"*" is either QUAL 9, or QUAL unavailable.  Made a recommendation in
a footnote, mainly as an indication that the ambiguity exists.  In
practice it's vanishingly unlikely to matter.

Fixes #715

--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -651,6 +651,10 @@ Each bit is explained in the following table:
     wrong}\}$. This field can be a `*' when quality is not stored. If
   not a `*', {\sf SEQ} must not be a `*' and the length of the quality string
   ought to equal the length of {\sf SEQ}.
+  \footnote{There is a small ambiguity with a sequence exactly one
+    base-pair long having quality 9.  This is ASCII `*' so it could be
+    interpreted as either QUAL 9 or as quality unavailable.  Given
+    this ambiguity, we recommend interpreting it as unavailable.}
 \end{enumerate}
 
 \subsection{The alignment section: optional fields}\label{sec:alnaux}
