Add SAM recommendation of MAPQ=0 for unmapped reads
We already have a recommendation that MAPQ of 255 should not be used.
Expand on this to recommend zero is used when unmapped.

This is purely a recommendation, made for maximum compatibility, and
not a specification requirement.

Fixes #727

--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -737,6 +737,7 @@ specific software package for it to function properly.
   \item Unmapped reads should be stored in the orientation in which they came
     off the sequencing machine and have their {\sf reverse} flag bit~(0x10)
     correspondingly unset.
+  \item Unmapped reads should have mapping quality zero.
   \end{enumerate}
 \item Multiple mapping
   \begin{enumerate}[label=\arabic*]
